src/style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  /* border: 1px red solid; */
}

body {
  height: 100vh;
  display: grid;
  grid-template-rows: 1fr 15fr;
}

.header {
  display: grid;
  grid-template-columns: 5fr 1fr 20fr;
  border: 1px solid red;
}

h1 {
  color: red;
}

.container {
  height: auto;
  display: grid;
  grid-template-columns: 1fr 5fr;
}

.inbox, .add-task, .add-project {
  cursor: pointer;
}

.sidebar {
  margin: 5px 2%;
  border: 1px solid red;
  display: grid;
  grid-template-rows: 100px auto 50px;
}

.views-constainer {
  border: 1px red solid;
}

.projects-container {
  border: 1px red solid;
}
.projects-header {
  display: grid;
  grid-template-columns: 6fr 1fr;
}

.active-project {
  background-color: yellow;
}

.project-mini-menu {
  display: grid;
  grid-template-columns: repeat(5, 1fr);
  gap: 3px;
}

.project-mini-menu-button {
  cursor: pointer;
}

.settings-container {
  margin: 5px;
  display:grid;
  grid-template-columns: 20px auto;
  gap: 5px;
  border: 1px red solid;
}

.main {
  border: 1px red solid;
  
}

.tasks-list-header, .task {
  height: 1.5rem;
  margin: 0 1%;
  display: grid;
  grid-template-columns: 1fr 1fr 15fr 3fr 3fr;
  border-bottom: 1px solid darkgray;
}

.tasks-list-header {
  height: 2rem;
}

.task-list {
  border: 1px blue solid;

}

.active-task {
  background-color: yellow;
}

.new-task {
  margin: 0 1%;
  display: grid;
  grid-template-columns: 1fr 1fr 15fr 3fr 3fr;
  grid-template-rows: 1fr 1fr;
}

.editing-task {
  background-color: yellow;
  margin: 0 1%;
  display: grid;
  grid-template-columns: 1fr 1fr 15fr 3fr 3fr;
  grid-template-rows: 1fr 1fr;
}

.focus-btn {
  margin: 3px 15px 3px 0;
  cursor: pointer;
}

.done {
  text-decoration: line-through
}

.date-passed {
  color: red;
}

.delete-btn {
  margin: 3px 30%;
}

